# The installation requires pip>=23.0. If not, it will fail in rather
# cryptic ways (depending exactly what options are used).
#

# We have chosen not to explicitly list the dependency on GDAL. This is
# because GDAL itself cannot be installed with pip, and so must already be
# installed on the system by some other means.

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyshepseg"
dynamic = ["version"]
authors = [
  {name = "Sam Gillingham"},
  {name = "Neil Flood"}
]
description = "Python implementation of the image segmentation algorithm described by Shepherd et al"
readme = "README.md"
license = {file = "LICENSE.txt"}

dependencies = [
    "numba",
    "scikit-learn"
]

[project.scripts]
pyshepseg_run_seg = "pyshepseg.cmdline.run_seg:main"
pyshepseg_tiling = "pyshepseg.cmdline.tiling:main"
pyshepseg_subset = "pyshepseg.cmdline.subset:main"
pyshepseg_runtests = "pyshepseg.cmdline.runtests:main"
pyshepseg_variograms = "pyshepseg.cmdline.variograms:main"
pyshepseg_segmentationworkercmd = "pyshepseg.cmdline.pyshepseg_segmentationworkercmd:mainCmd"

[tool.setuptools]
packages = ["pyshepseg", "pyshepseg.cmdline"]

[tool.setuptools.dynamic]
version = {attr = "pyshepseg.__version__"}

[project.urls]
Repository = "https://github.com/ubarsc/pyshepseg.git"
Homepage = "https://www.pyshepseg.org"
